[project]
name = "ComfyUI-Gemini-API"
version = "1.0.0"
description = "Custom ComfyUI nodes for Google Gemini AI models via API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/spiderman99sumit/ComfyUI-Gemini-API"
